# Serving

./: .pre-commit-config.yaml
core/preprocess/: CMakeLists.txt
core/preprocess/NvDecoder/: NvDecoder.cpp
core/preprocess/Utils/: BitDepth.cu  ColorSpace.cu  ColorSpace.h  FFmpegDemuxer.h  FFmpegStreamer.h  NvCodecUtils.h  crc.cu
core/preprocess/codessdkinclude/include/: cuviddec.h  nvEncodeAPI.h  nvcuvid.h
core/preprocess/ffmpeginclude/include/libavcodec/: avcodec.h  d3d11va.h  dirac.h  dv_profile.h  jni.h  mediacodec.h  vdpau.h
core/preprocess/ffmpeginclude/include/libavdevice/: index.html  version.h
core/preprocess/ffmpeginclude/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h  index.html
core/preprocess/ffmpeginclude/include/libavformat/: version.h
core/preprocess/ffmpeginclude/include/libavutil/: aes_ctr.h  audio_fifo.h  avstring.h  blowfish.h  bswap.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  dict.h  display.h  eval.h  ffversion.h  fifo.h  file.h  hwcontext_cuda.h  hwcontext_drm.h  hwcontext_vaapi.h  imgutils.h  intfloat.h  log.h  lzo.h  mastering_display_metadata.h  md5.h  mem.h  motion_vector.h  pixdesc.h  replaygain.h  ripemd.h  tea.h  (+6 more)
core/preprocess/hwvideoframe/: CMakeLists.txt
core/preprocess/hwvideoframe/cuda/: CMakeLists.txt  resize.cu
core/preprocess/hwvideoframe/include/: center_crop.h  div.h  image_io.h  normalize.h  op_context.h  resize.h  resize_by_factor.h  rgb_swap.h  sub.h  utils.h
core/preprocess/hwvideoframe/pybind/: pybind_gpu_preprocess.cpp
core/preprocess/hwvideoframe/src/: center_crop.cpp  div.cpp  image_io.cpp  normalize.cpp  resize.cpp  resize_by_factor.cpp  rgb_swap.cpp  sub.cpp  utlis.cpp
core/preprocess/include/: ExtractFrameBGRARaw.h  ExtractFrameBase.h  ExtractFrameJpeg.h
core/preprocess/lib/: libavformat.so.58  libpython2.7.so.1.0  libx264.so.159
core/preprocess/nvdec-extractframe/: .CMakeLists.txt.swo  .CMakeLists.txt.swp.tmp  CMakeLists.txt
core/preprocess/nvdec-extractframe/NvDecoder/: NvDecoder.cpp  NvDecoder.h
core/preprocess/nvdec-extractframe/Utils/: FFmpegDemuxer.h
core/preprocess/nvdec-extractframe/cuda/: CMakeLists.txt  Logger.h  NvCodecUtils.h  Resize.cu
core/preprocess/nvdec-extractframe/include/: ExtractFrameBase.h  ExtractFrameJpeg.h
core/preprocess/nvdec-extractframe/src/: ExtractFrameBGRARaw.cpp  ExtractFrameBase.cpp  ExtractFrameJpeg.cpp  main.cpp.tmo
core/preprocess/pybind/: pybind_frame_extract.cpp
core/preprocess/pythoninclude/python2.7/: Python.h  ast.h  ceval.h  code.h  complexobject.h  enumobject.h  errcode.h  fileobject.h  genobject.h  import.h  intrcheck.h  iterobject.h  longintrepr.h  longobject.h  marshal.h  methodobject.h  moduleobject.h  object.h  parsetok.h  patchlevel.h  pgenheaders.h  pycapsule.h  pyconfig.h  pyctype.h  pydebug.h  pyerrors.h  pyexpat.h  pymath.h  pymem.h  pyport.h  pythonrun.h  pythread.h  rangeobject.h  sliceobject.h  stringobject.h  symtable.h  sysmodule.h  timefuncs.h  ucnhash.h  unicodeobject.h  (+1 more)
core/preprocess/src/: ExtractFrameBGRARaw.cpp  ExtractFrameBase.cpp  ExtractFrameJpeg.cpp  main.cpp
(+158 files in other folders)
